--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "checkmyip",
-  "version": "1.0.1",
-  "description": "Display your public IP",
+  "version": "1.0.2",
   "main": "index.js",
   "bin": {
     "checkmyip": "index.js"
@@ -9,6 +8,12 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Your Name",
-  "license": "MIT"
+  "keywords": ["checkmyip", "findmyip", "ipaddress"], 
+  "author": "Sedat ERGOZ",  
+  "license": "ISC",
+  "description": "Display your public IP",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eaeoz/checkmyip.git"
+  }
 }
